Updated about section

--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                             <span>Vision Statement</span>
                             <br>
                             <br>
-                            <!-- <a href="#" class="st-btn">Read More</a> -->
+                            <a href="about.html#aboutVision" class="st-btn">Read More</a>
                         </div>
                         <div class="col-md-4 wow fadeInRight" data-wow-delay=".75s">
                             <img src="img/misc/pic-2.jpg" class="img-responsive" alt="">
@@ -431,15 +431,15 @@
                             <span>Mission Statement</span>
                             <br>
                             <br>
-                            <!-- <a href="#" class="st-btn">Read More</a> -->
+                            <a href="about.html#aboutMission" class="st-btn">Read More</a>
                         </div>
                         <div class="col-md-4 wow fadeInRight" data-wow-delay="1s">
                             <img src="img/misc/pic-3.jpg" class="img-responsive" alt="">
                             <h3>Participate With Us</h3>
-                            <span>Participate With Us Statement</span>
+                            <span>What We Believe</span>
                             <br>
                             <br>
-                            <!-- <a href="#" class="st-btn">Read More</a> -->
+                            <a href="about.html#aboutWhatWeBelieve" class="st-btn">Read More</a>
                         </div>
                     </div>
                 </div>
