Added zelle qr code to donation page

--- a/donate.html
+++ b/donate.html
@@ -155,16 +155,31 @@
                 <div class="row justify-content-center g-4">
                     <div class="col-md-4">
                         <div class="card shadow-sm border-0 p-4"
-                            style="border-top: 2px solid #00c92e !important;border-left: 2px solid #00c92e !important;">
-                            <div style="text-align:center;">
-                                <img src="/img/icons/i-cashapp.png" alt="Cash App" class="img-fluid mb-3"
+                            style="height:400px;border-top: 2px solid #00c92e !important;border-left: 2px solid #00c92e !important;">
+                            <div style="text-align:center;" class="my-4">
+                                <img src="/img/icons/i-cashapp.png" alt="Cash App" class="img-fluid"
                                     style="width:60px;height:60px;">
                             </div>
-                            <h1 class="fw-bold text-center">Cash App</h1>
+                            <h1 class="fw-bold text-center my-4">Cash App</h1>
+                            <p class="text-center my-4" style="font-size: 2.3rem;">Send a donation instantly through Cash App.
+                            </p>
+                            <a href="https://cash.app/TheLeafChurch" target="_blank" class="btn btn-cashapp w-100 mt-5"
+                                style="font-size: 1.5rem;">Donate via Cash App</a>
+                        </div>
+                    </div>
+
+                    <div class="col-md-4">
+                        <div class="card shadow-sm border-0 p-4"
+                            style="height:400px;border-top: 2px solid #6b1cd7 !important;border-left: 2px solid #6b1cd7 !important;">
+                            <div style="text-align:center;">
+                                <img src="/img/donate/zelle.jpg" alt="Zelle QR Code" class="img-fluid mb-3"
+                                    style="width:auto;height:370px;">
+                            </div>
+                            <!-- <h1 class="fw-bold text-center">Cash App</h1>
                             <p class="text-center" style="font-size: 2rem;">Send a donation instantly through Cash App.
                             </p>
                             <a href="https://cash.app/TheLeafChurch" target="_blank" class="btn btn-cashapp w-100"
-                                style="font-size: 1.5rem;">Donate via Cash App</a>
+                                style="font-size: 1.5rem;">Donate via Cash App</a> -->
                         </div>
                     </div>
                 </div>
