--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
                         <div class="col-md-4 wow fadeInRight" data-wow-delay=".5s">
                             <img src="img/misc/pic-1.jpg" class="img-responsive" alt="">
                             <h3>Vision</h3>
-                            <span>Vision Statement</span>
+                            <span>Info</span>
                             <br>
                             <br>
                             <a href="about.html#aboutVision" class="st-btn">Read More</a>
@@ -428,15 +428,15 @@
                         <div class="col-md-4 wow fadeInRight" data-wow-delay=".75s">
                             <img src="img/misc/pic-2.jpg" class="img-responsive" alt="">
                             <h3>Mission</h3>
-                            <span>Mission Statement</span>
+                            <span>Info</span>
                             <br>
                             <br>
                             <a href="about.html#aboutMission" class="st-btn">Read More</a>
                         </div>
                         <div class="col-md-4 wow fadeInRight" data-wow-delay="1s">
                             <img src="img/misc/pic-3.jpg" class="img-responsive" alt="">
-                            <h3>Participate With Us</h3>
-                            <span>What We Believe</span>
+                            <h3>What We Believe</h3>
+                            <span>Info</span>
                             <br>
                             <br>
                             <a href="about.html#aboutWhatWeBelieve" class="st-btn">Read More</a>
