Minor cosmetic changes

--- a/donate.html
+++ b/donate.html
@@ -270,7 +270,7 @@
                                         Please follow these steps to link your card to our organization via the Kroger app on Android:
                                     </p>
 
-                                    <ol style="font-size: 1.4rem" class="mb-4 ps-3">
+                                    <ol style="margin-left: 2rem;font-size: 1.4rem" class="mb-4 ps-3">
                                         <li class="mb-2">
                                             Go to the
                                             <a href="https://www.kroger.com/androidapp"
@@ -312,7 +312,7 @@
                                         Please follow these steps to link your card to our organization via the Kroger app on Apple/iOS/iPhone:
                                     </p>
 
-                                    <ol style="font-size: 1.4rem" class="mb-4 ps-3">
+                                    <ol style="margin-left: 2rem;font-size: 1.4rem" class="mb-4 ps-3">
                                         <li class="mb-2">
                                             Go to the
                                             <a href="https://www.kroger.com/iosapp"
@@ -346,7 +346,7 @@
                                         If on a desktop/laptop computer, please follow these steps:
                                     </p>
 
-                                    <ol style="font-size: 1.4rem" class="mb-4 ps-3">
+                                    <ol style="margin-left: 2rem;font-size: 1.4rem" class="mb-4 ps-3">
                                         <li class="mb-2">
                                             If you already have a Kroger account,
                                             <a href="https://login.kroger.com/eciamp.onmicrosoft.com/b2c_1a__ciam_signin_signup/oauth2/v2.0/authorize?client_id=d2bea89d-7861-4b8b-8fe5-13714f1b2c22&scope=https%3A%2F%2Feciamp.onmicrosoft.com%2FLogin-Channel%2Fshopper%20https%3A%2F%2Feciamp.onmicrosoft.com%2FLogin-Channel%2Fweb%20openid%20profile%20offline_access&redirect_uri=https%3A%2F%2Fwww.kroger.com%2Fconnect-auth&client-request-id=019a6961-baae-7fc5-a18b-7e369213a4f3&response_mode=fragment&response_type=code&x-client-SKU=msal.js.browser&x-client-VER=3.16.0&client_info=1&code_challenge=zgZIsvgiba7JwYifirtEoLhlzrjUr0feQ-R2_U8h1Fo&code_challenge_method=S256&nonce=019a6961-baaf-7221-a7c2-5ade4e603187&state=eyJpZCI6IjAxOWE2OTYxLWJhYWYtN2M1Yy04YjZhLTA1Nzg0MDY1MTdkOSIsIm1ldGEiOnsiaW50ZXJhY3Rpb25UeXBlIjoicmVkaXJlY3QifX0%3D%7C%7B%22originalUrl%22%3A%22%2Fpr%2Fsign-in-and-save%22%2C%22calledFrom%22%3A%22account-sign-in%22%7D&client=kroger&device_id=wDExVTcrtG&bannerName=kroger&source=banner%20web&marketingCloudVisitorID=14733008673188671232536582852849799551&enable_create_account=true"
